--- a/package.json
+++ b/package.json
@@ -1,28 +1,44 @@
 {
-  "name": "vite-plugin-svg-store",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "name": "ts-library-starter",
+  "version": "0.0.1",
+  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "node scripts/build.js",
+    "test": "jest",
+    "docs:dev": "vitepress dev docs",
+    "docs:build": "vitepress build docs",
+    "docs:preview": "vitepress preview docs",
+    "example:dev": "cd example && vite"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "devDependencies": {
+    "@babel/preset-env": "7.22.9",
+    "@babel/preset-typescript": "7.22.5",
+    "@rollup/plugin-typescript": "11.1.2",
+    "@types/jest": "29.5.3",
+    "@types/minimist": "1.2.2",
+    "@types/node": "20.4.5",
+    "@typescript-eslint/eslint-plugin": "6.2.0",
+    "@typescript-eslint/parser": "6.2.0",
+    "eslint": "8.46.0",
+    "execa": "7.2.0",
+    "fs-extra": "11.1.1",
+    "jest": "29.6.2",
+    "minimist": "1.2.8",
+    "rollup": "3.27.0",
+    "rollup-plugin-esbuild": "5.0.0",
+    "rollup-plugin-typescript2": "0.35.0",
+    "ts-node": "10.9.1",
+    "tslib": "2.6.1",
+    "typescript": "5.0.2",
+    "vite": "^4.5.0",
+    "vitepress": "1.0.0-beta.7"
+  },
+  "peerDependencies": {
+    "vite": "^4.5.0"
+  },
   "dependencies": {
     "fast-glob": "^3.3.2",
     "svg-baker": "^1.7.0",
     "svgo": "^3.0.3"
-  },
-  "devDependencies": {
-    "@types/node": "^20.9.0",
-    "@typescript-eslint/eslint-plugin": "^6.10.0",
-    "@typescript-eslint/parser": "^6.10.0",
-    "eslint": "^8.53.0",
-    "typescript": "^5.2.2",
-    "vite": "^4.5.0"
-  },
-  "peerDependencies": {
-    "vite": "^4.5.0"
   }
 }
