--- a/example/package.json
+++ b/example/package.json
@@ -26,6 +26,7 @@
     "npm-run-all2": "^6.1.1",
     "typescript": "~5.2.0",
     "vite": "^4.4.11",
-    "vue-tsc": "^1.8.19"
+    "vue-tsc": "^1.8.19",
+    "vite-plugin-svg-store": "file:../"
   }
 }
