--- a/example/package.json
+++ b/example/package.json
@@ -2,6 +2,7 @@
   "name": "vite-plugin-svg-store-example",
   "version": "0.0.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "run-p type-check \"build-only {@}\" --",
@@ -25,8 +26,8 @@
     "eslint-plugin-vue": "^9.17.0",
     "npm-run-all2": "^6.1.1",
     "typescript": "~5.2.0",
-    "vite": "^4.4.11",
-    "vue-tsc": "^1.8.19",
-    "vite-plugin-svg-store": "file:../"
+    "vite": "^5.0.10",
+    "vite-plugin-svg-store": "file:..",
+    "vue-tsc": "^1.8.19"
   }
 }
